# anland

./: CMakeLists.txt  build_and_install.sh  build_magisk_module.sh  pack_src.sh
.github/workflows/: build_apk.yml
android_consumer/app/src/main/java/com/anland/consumer/: MainActivity.java
android_consumer/app/src/main/jni/: native_consumer.c
consumers/anland_v5/android_consumer/app/src/main/: AndroidManifest.xml
consumers/anland_v5/android_consumer/app/src/main/java/com/anland/consumer/: MainActivity.java  SettingsActivity.java
consumers/anland_virtual_keyboard_v2/android_consumer/app/src/main/: AndroidManifest.xml
consumers/anland_virtual_keyboard_v2/android_consumer/app/src/main/jni/: native_consumer.c
consumers/anland_virtual_keyboard_v2/common/: protocol.h
consumers/anland_virtual_keyboard_v2/libdisplay_consumer/: display_consumer.c
magisk_module/: module.prop
tests/: run_glxgears.sh  test_sdl_consumer.c
weston/: meson.build  meson_options.txt
weston/frontend/: config-helpers.c  main.c
weston/include/libweston/: backend-anland.h  libweston.h  meson.build
weston/libweston/: compositor.c  meson.build
weston/libweston/backend-anland/: anland.c  meson.build
